--- a/ShopsDefault/index.html
+++ b/ShopsDefault/index.html
@@ -2,9 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Page test</title>
 </head>
 <body>
     PAGE TEST
+    
+
 </body>
 </html>
